Add overall styling for header/footer

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.html
@@ -18,8 +18,8 @@
         <span translate>App.Footer.Copyright</span>
         <div class="contacts">
             <span translate class="contacts__label">App.Footer.Contacts</span>
-            <span class="contacts__item">{{phone}}</span>
-            <span class="contacts__item">{{email}}</span>
+            <a target="_blank" class="contacts__item" href="tel:{{phone}}}">{{phone}}</a>
+            <a target="_blank" class="contacts__item" href="mailto:{{email}}">{{email}}</a>
         </div>
     </div>
 </footer>
