DDP-6472 add dashboard button to pancan, adjust styles

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.scss
@@ -163,15 +163,15 @@
     }
 }
 
-@media screen and (max-width: $desktop-breakpoint) {
-    .controls {
-        app-auth {
-            display: none;
-        }
+@media screen and (max-width: $tablet-breakpoint) {
+    .controls app-auth{
+        display: none;
     }
+}
 
+@media screen and (max-width: $desktop-breakpoint) {
     .panel-controls ::ng-deep {
-        .join-button,
+        .action-button,
         .SimpleButton {
             font-size: 1.2rem;
         }
