--- a/ddp-workspace/projects/ddp-pancan/src/styles.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles.scss
@@ -1,6 +1,9 @@
 @import 'styles/variables';
 @import 'styles/fonts';
 @import 'styles/common';
+@import 'styles/activities';
+@import 'styles/buttons';
+
 
 html,
 body {
