--- a/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
@@ -16,6 +16,10 @@ $footer-height: 14.94rem;
 // Colors
 $text-color: #000000;
 $primary-color: #7154FF;
+$grey-text-color: #59585F;
 $grey-button-color: #a8a8a8;
 $section-grey-background-color: #F6F7FA;
 $warn-color: #f44336;
+$activity-step-pristine: #bbbbbe;
+$activity-step-completed: $grey-text-color;
+$activity-step-active: #1d1b25;
