--- a/ddp-workspace/projects/ddp-pancan/src/styles/fonts.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Untitled-Sans-Light';
-    src: url('../assets/fonts/Untitled_Sans_Light.TTF') format('truetype');
+    src: url('../assets/fonts/Untitled_Sans_Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'Untitled-Sans-Regular';
-    src: url('../assets/fonts/Untitled_Sans_Regular.TTF') format('truetype');
+    src: url('../assets/fonts/Untitled_Sans_Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: 'Untitled-Sans-Medium';
-    src: url('../assets/fonts/Untitled_Sans_Medium.TTF') format('truetype');
+    src: url('../assets/fonts/Untitled_Sans_Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
