DDP-6266 Fixed Release Requests dashboard displaying

--- a/ddp-workspace/projects/ddp-cgc/src/app/components/pages/dashboard/dashboard.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/pages/dashboard/dashboard.component.html
@@ -17,6 +17,7 @@
   ></app-user-activities>
 
   <app-release-requests
+    *ngIf="showReleaseRequests"
     [activities]="releaseRequests"
     (viewActivity)="onViewActivity($event)"
     (startActivity)="onStartActivity($event)"
