DDP-5564: Update FAQ section with new content

--- a/ddp-workspace/projects/ddp-circadia/src/app/components/pages/home/home.component.html
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/pages/home/home.component.html
@@ -92,7 +92,7 @@
             >{{ Question.Title }}
           </mat-expansion-panel-header>
 
-          {{ Question.Answer }}
+          <div [innerHTML]="Question.Answer"></div>
         </mat-expansion-panel>
       </ng-container>
     </mat-accordion>
