--- a/ddp-workspace/projects/ddp-circadia/src/styles/_typography.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/styles/_typography.scss
@@ -40,3 +40,13 @@
     text-decoration: underline;
   }
 }
+
+.faq-paragraph {
+  font-size: 1.8rem;
+  font-weight: 300;
+  line-height: 1.45;
+
+  & + & {
+    margin-top: 0.75em;
+  }
+}
