--- a/ddp-workspace/projects/ddp-pancan/src/styles/activities.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/activities.scss
@@ -138,6 +138,10 @@
     line-height: 2rem;
     color: $text-color;
     margin: 1rem 0 1rem -1.5625rem;
+
+    > .PageContent-text {
+        margin-left: 1.5625rem;
+    }
 }
 
 .ddp-simple-list {
