--- a/ddp-workspace/projects/ddp-pancan/src/styles.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles.scss
@@ -79,6 +79,22 @@ a {
     }
 }
 
+// language selector
+ddp-language-selector {
+    .ddp-globe {
+        stroke: $text-color;
+        fill: transparent;
+        vertical-align: middle;
+        margin-right: 0.2rem;
+    }
+}
+
+.footer {
+    .ddp-globe {
+        stroke: white;
+    }
+}
+
 .wrapper {
     height: 100vh;
     margin-bottom: $footer-height;
