--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/confirmDialog/confirmDialog.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/confirmDialog/confirmDialog.component.html
@@ -2,8 +2,10 @@
     <span class="confirm-dialog-title"
           [innerHTML]="title | translate">
     </span>
-    <ng-container *ngFor="let item of content">
-        <p [innerHTML]="item | translate : contentSubstitutions" class="confirm-dialog-content"></p>
+    <ng-container *ngIf="content">
+        <div [innerHTML]="content | translate : contentSubstitutions"
+             class="confirm-dialog-content">
+        </div>
     </ng-container>
     <div class="confirm-dialog-buttons">
         <button mat-flat-button class="ctrl-btn confirm-btn"
