DDP-5371: Add footer

--- a/ddp-workspace/projects/ddp-brugada/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/header/header.component.html
@@ -53,9 +53,9 @@
         </li>
 
         <li class="link-list__item">
-          <a class="link" [routerLink]="Route.MailingList">
+          <button class="link">
             {{ 'App.Header.Links.MailingList' | translate }}
-          </a>
+          </button>
         </li>
       </ul>
 
