--- a/ddp-workspace/projects/ddp-brugada/src/styles/_util.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_util.scss
@@ -1,11 +1,19 @@
 .link {
+  background: transparent;
+  border: none;
+
   font: inherit;
   color: inherit;
   text-decoration: none;
 
   cursor: pointer;
+  transition: opacity 0.3s ease;
 
   &:hover {
-    text-decoration: underline;
+    opacity: 75%;
   }
+}
+
+.text-bold {
+  font-weight: bold;
 }
