DDP-6601: Fix email and phone number

--- a/ddp-workspace/projects/ddp-circadia/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/footer/footer.component.html
@@ -54,12 +54,12 @@
 
         <ul class="links__list">
           <li class="links__list-item">
-            <a class="links__link" href="tel:16171234567"> 1-617-123-4567 </a>
+            <a class="links__link" href="tel:16177267733">1 (617) 726-7733</a>
           </li>
 
           <li class="links__list-item">
-            <a class="links__link" href="mailto:info@circadiastudy.org">
-              info@circadiastudy.org
+            <a class="links__link" href="mailto:circadiastudy@mgh.harvard.edu">
+              circadiastudy@mgh.harvard.edu
             </a>
           </li>
         </ul>
