DDP-6593 Added new titles for release requests

--- a/ddp-workspace/projects/ddp-cgc/src/app/components/release-requests/release-requests.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/release-requests/release-requests.component.html
@@ -11,7 +11,7 @@
         {{ 'ReleaseRequests.ActivityName' | translate }}
       </div>
 
-      {{ activity.activityName }}
+      {{ activity.activityTitle }}
     </td>
   </ng-container>
 
