--- a/ddp-workspace/projects/ddp-cgc/src/app/components/pages/dashboard/dashboard.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/pages/dashboard/dashboard.component.html
@@ -4,30 +4,37 @@
   </h1>
 
   <ng-container
-    *ngTemplateOutlet="loading ? loadingSpinner : userActivities"
-  ></ng-container>
+    *ngIf="{ 
+      loading: loading$ | async,
+      activities: activities$ | async,
+      releaseRequests: releaseRequests$ | async, 
+      showReleaseRequests: showReleaseRequests$ | async 
+    } as state"
+  >
+    <ng-container
+      *ngIf="state.loading else loadingSpinner"
+    >
+      <app-user-activities
+        [activities]="state.activities"
+        (viewActivity)="onViewActivity($event)"
+        (startActivity)="onStartActivity($event)"
+        (continueActivity)="onContinueActivity($event)"
+      ></app-user-activities>
+
+      <app-release-requests
+        *ngIf="state.showReleaseRequests"
+        [activities]="state.releaseRequests"
+        (viewActivity)="onViewActivity($event)"
+        (startActivity)="onStartActivity($event)"
+        (continueActivity)="onContinueActivity($event)"
+        (startNewActivity)="onStartNewReleaseRequest($event)"
+      ></app-release-requests>
+    </ng-container>
+  </ng-container>
 </div>
-
-<ng-template #userActivities>
-  <app-user-activities
-    [activities]="activities"
-    (viewActivity)="onViewActivity($event)"
-    (startActivity)="onStartActivity($event)"
-    (continueActivity)="onContinueActivity($event)"
-  ></app-user-activities>
-
-  <app-release-requests
-    *ngIf="showReleaseRequests"
-    [activities]="releaseRequests"
-    (viewActivity)="onViewActivity($event)"
-    (startActivity)="onStartActivity($event)"
-    (continueActivity)="onContinueActivity($event)"
-    (startNewActivity)="onStartNewReleaseRequest($event)"
-  ></app-release-requests>
-</ng-template>
 
 <ng-template #loadingSpinner>
   <div class="spinner-container">
     <mat-spinner></mat-spinner>
   </div>
-</ng-template>
+</ng-template> 
