--- a/ddp-workspace/projects/ddp-circadia/src/app/components/activity/activity.component.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/activity/activity.component.scss
@@ -91,3 +91,12 @@
 .pull-right {
   margin-left: auto;
 }
+
+.section--intro {
+  padding: 1.2rem 2.4rem;
+
+  border: 2px solid $color-yellow-1;
+  border-radius: 6px;
+
+  text-align: center;
+}
