--- a/ddp-workspace/projects/ddp-circadia/src/styles/_activity.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/styles/_activity.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .activity {
   h1,
   h2,
@@ -87,6 +89,23 @@
     width: 100%;
 
     margin: 1em auto;
+  }
+
+  .consent-download__link {
+    font-weight: 600;
+    color: $color-blue-2;
+    text-decoration: none;
+
+    transition: opacity 0.2s ease;
+
+    &:hover,
+    &:focus {
+      opacity: 80%;
+    }
+
+    &:active {
+      opacity: 75%;
+    }
   }
 
   /*
