--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/confirmDialog/confirmDialog.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/confirmDialog/confirmDialog.component.html
@@ -2,11 +2,10 @@
     <span class="confirm-dialog-title"
           [innerHTML]="title | translate">
     </span>
-    <ng-container *ngIf="content">
-        <div [innerHTML]="content | translate : contentSubstitutions"
-             class="confirm-dialog-content">
-        </div>
-    </ng-container>
+    <div *ngIf="content"
+         [innerHTML]="content | translate : contentSubstitutions"
+         class="confirm-dialog-content">
+    </div>
     <div class="confirm-dialog-buttons">
         <button mat-flat-button class="ctrl-btn confirm-btn"
                 [color]="confirmBtnColor"
