--- a/ddp-workspace/projects/ddp-pancan/src/styles.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles.scss
@@ -3,7 +3,7 @@
 @import 'styles/common';
 @import 'styles/activities';
 @import 'styles/buttons';
-
+@import 'styles/dashboard';
 
 html,
 body {
@@ -227,6 +227,6 @@ h1 {
     font-family: $primary-font-medium;
 }
 
-toolkit-dashboard-redesigned .main {
-    background-color: $section-grey-background-color;
+.content_medium {
+    max-width: 1100px;
 }
