--- a/ddp-workspace/projects/ddp-brugada/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/header/header.component.scss
@@ -72,6 +72,7 @@
 
       transform: translate3d(-120%, 0, 0);
       transition: transform 0.3s ease;
+      z-index: 10;
 
       @include media-sm {
         height: calc(100vh - 9.2rem);
