--- a/ddp-workspace/projects/ddp-brugada/src/styles/_util.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_util.scss
@@ -14,6 +14,41 @@
   }
 }
 
+.uppercased-link {
+  position: relative;
+
+  font: inherit;
+  font-weight: bold;
+  color: inherit;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
+
+  transition: opacity 0.3s ease;
+
+  &:hover,
+  &:focus {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.7;
+  }
+
+  &::after {
+    content: '';
+
+    height: 1px;
+
+    position: absolute;
+    right: 0;
+    bottom: 3px;
+    left: 0;
+
+    background: currentColor;
+  }
+}
+
 .text-bold {
   font-weight: bold;
 }
