--- a/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
@@ -7,9 +7,10 @@ $colors: (
   'scarlet': $__scarlet,
   'scarlet:hover': darken($__scarlet, 4%),
   'scarlet:active': darken($__scarlet, 7%),
-  'beige': #e1ddcf,
+  'beige': #f8f5ec,
   'beige:dark:1': #bfbaaf,
   'beige:dark:2': #5a5656,
+  'teal': #589297,
   'dark-grey': #49505a,
   'white': $__white,
   'white:hover': darken($__white, 8%),
