--- a/ddp-workspace/projects/ddp-brugada/src/styles/_util.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_util.scss
@@ -1,3 +1,5 @@
+@import 'colors';
+
 .link {
   background: transparent;
   border: none;
@@ -46,6 +48,24 @@
     left: 0;
 
     background: currentColor;
+  }
+}
+
+.underlined-link {
+  font-weight: bold;
+  text-decoration: underline;
+  color: map-get($colors, 'teal');
+
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+
+  &:hover,
+  &:focus {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.7;
   }
 }
 
