--- a/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
@@ -12,6 +12,7 @@ $colors: (
   'beige:dark:2': #5a5656,
   'teal': #589297,
   'dark-grey': #49505a,
+  'light-grey': #e3e3e3,
   'white': $__white,
   'white:hover': darken($__white, 8%),
   'white:active': darken($__white, 13%),
