DDP-6454: Add  mailing list modal

--- a/ddp-workspace/projects/ddp-brugada/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/header/header.component.html
@@ -53,7 +53,7 @@
         </li>
 
         <li class="link-list__item">
-          <button class="link">
+          <button class="link" (click)="openMailingListModal()">
             {{ 'App.Header.Links.MailingList' | translate }}
           </button>
         </li>
