--- a/ddp-workspace/projects/ddp-circadia/src/styles/_activity.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/styles/_activity.scss
@@ -93,18 +93,18 @@
 
   .consent-download__link {
     font-weight: 600;
-    color: $color-blue-2;
-    text-decoration: none;
+    color: $color-font-dark;
+    text-decoration: underline;
 
     transition: opacity 0.2s ease;
 
     &:hover,
     &:focus {
-      opacity: 80%;
+      opacity: 0.8;
     }
 
     &:active {
-      opacity: 75%;
+      opacity: 0.7;
     }
   }
 
