--- a/ddp-workspace/projects/ddp-cgc/src/app/components/pages/about-us/about-us.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/pages/about-us/about-us.component.html
@@ -19,5 +19,9 @@
       <p [innerHTML]="'AboutUsPage.Paragraph7' | translate"></p>
       <p [innerHTML]="'AboutUsPage.Paragraph8' | translate"></p>
       <p [innerHTML]="'AboutUsPage.Paragraph9' | translate"></p>
+
+      <div class="box background-light__blue">
+        <p class="box-text" [innerHTML]="'AboutUsPage.Box' | translate"></p>
+      </div>
   </div>
 </div>
