--- a/ddp-workspace/projects/ddp-cgc/src/app/components/pages/learn-more/learn-more.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/pages/learn-more/learn-more.component.html
@@ -32,6 +32,11 @@
           </div>
         </div>
       </ng-container>
+
+      <div
+        class="box box--light-blue"
+        [innerHTML]="'LearnMore.Info' | translate"
+      ></div>
     </div>
   </div>
 </div>
