Extract participation-section.component for re-using next

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
@@ -1,8 +1,6 @@
 @import '../../../styles/variables.scss';
 @import '../../../styles/common.scss';
 
-$container-width: 1200px;
-
 .main > * {
     width: 100%;
 }
@@ -74,54 +72,12 @@ section {
     }
 
     &.participate {
-        padding: 7rem 1.25rem;
+        padding: 7rem 1.25rem 4.25rem;
         text-align: left;
-
-        .title {
-            margin-bottom: 4.88rem;
-        }
-
-        .container {
-            max-width: $container-width;
-            margin: 0 auto;
-
-            &.steps {
-                display: flex;
-                justify-content: space-between;
-            }
-        }
-
-        .step {
-            margin: 0 1.5rem 0 0;
-            font-size: 1rem;
-
-            &:last-child {
-                margin-right: 0;
-            }
-
-            &__image {
-                display: block;
-                margin: 0 auto 1.63rem;
-                position: relative;
-                left: -10%;
-            }
-
-            &__title {
-                display: inline;
-            }
-
-            &__description {
-                font-size: 1.5rem;
-                letter-spacing: -0.1px;
-                line-height: 28px;
-                margin-top: 1rem;
-                max-width: 240px;
-            }
-        }
     }
 
     &.faq {
-        padding: 6.88rem 0 3.75rem 0;
+        padding: 6.88rem 0 5.75rem 0;
 
         .container {
             box-sizing: border-box;
@@ -136,7 +92,7 @@ section {
         padding: 5.38rem 1.25rem 4.5rem 1.25rem;
 
         .container {
-            max-width: $container-width;
+            max-width: $landing-page-container-width;
             margin: 0 auto;
             text-align: left;
         }
@@ -217,12 +173,6 @@ section {
     margin-top: 2.81rem;
 }
 
-.center {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-}
-
 @media screen and (max-width: $desktop-breakpoint) {
     section {
         &:nth-child(n) {
@@ -265,28 +215,6 @@ section {
             }
         }
 
-        &.participate {
-            .steps {
-                flex-wrap: wrap;
-                gap: 3rem;
-            }
-
-            .step {
-                flex: 1 1 200px;
-                margin-right: 0;
-
-                &__image {
-                    width: 250px;
-                    height: 250px;
-                    left: unset;
-                }
-
-                &__description {
-                    max-width: unset;
-                }
-            }
-        }
-
         &.faq {
             .container {
                 padding: 0;
@@ -323,7 +251,6 @@ section {
             padding-top: 5rem;
         }
 
-        &.participate,
         &.join-cmi {
             padding-bottom: 5rem;
         }
