--- a/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
@@ -12,6 +12,7 @@ $secondary-font: Source Serif Pro;
 // Other
 $header-height: 6rem;
 $footer-height: 14.94rem;
+$landing-page-container-width: 1200px;
 
 // Colors
 $text-color: #000000;
