--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
@@ -57,31 +57,7 @@
     </section>
 
     <section class="stay-informed">
-        <div class="container">
-            <h2 class="title static-page-title" translate>App.HomePage.StayInformedSection.Title</h2>
-            <div class="social-media">
-                <div class="text static-page-paragraph-text" translate>App.HomePage.StayInformedSection.Text</div>
-                <div class="social-media__links">
-                    <a class="social-media__link" [href]="twitterUrl" target="_blank">
-                        <img class="social-media__logo" lazy-resource src="assets/images/twitter.svg"
-                             [alt]="'Common.Alts.Twitter' | translate">
-                    </a>
-                    <a class="social-media__link" [href]="facebookUrl" target="_blank">
-                        <img class="social-media__logo" lazy-resource src="assets/images/facebook.svg"
-                             [alt]="'Common.Alts.Facebook' | translate">
-                    </a>
-                    <a class="social-media__link" [href]="instagramUrl" target="_blank">
-                        <img class="social-media__logo" lazy-resource src="assets/images/instagram.svg"
-                             [alt]="'Common.Alts.Instagram' | translate">
-                    </a>
-                </div>
-            </div>
-            <button mat-stroked-button
-                    class="btn join-btn small-letter-spacing btn-common btn-outline"
-                    (click)="openJoinMailingList()">
-                {{'App.HomePage.StayInformedSection.JoinMailingListButton' | translate}}
-            </button>
-        </div>
+        <app-stay-informed-section></app-stay-informed-section>
     </section>
 
     <section class="join-cmi">
