DDP-6472 pass activities to userActivities component via input + comments, some renaming

--- a/ddp-workspace/projects/ddp-pancan/src/styles/dashboard.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/dashboard.scss
@@ -91,3 +91,14 @@ toolkit-dashboard-redesigned .main {
         }
     }
 }
+
+.infobox_dashboard {
+    padding: 1.5rem 2rem;
+    position: relative;
+
+    .close-button {
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+}
