--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
@@ -12,7 +12,7 @@
             <img src="assets/images/logo-broad.svg"
                  [alt]="'App.HomePage.IntroductionSection.BroadAlt' | translate"
                  width="124" height="32">
-            <img src="../../../assets/images/dana-farber-logo.png"
+            <img src="assets/images/dana-farber-logo.png"
                  [alt]="'App.HomePage.IntroductionSection.DanaFarberAlt' | translate"
                  width="124" height="32">
         </div>
